# EndlessSpace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
EndlessSpace/: .gitignore  CMakeLists.txt
EndlessSpace/src/: CMakeLists.txt  Main.cpp  Main.hpp
EndlessSpace/src/Data/Shaders/: HDR.shader  Letter.shader  Skybox.shader  compile.sh
EndlessSpace/src/Data/Shaders/HDR/: HDR.frag  HDR.frag.spv  HDR.vert  HDR.vert.spv
EndlessSpace/src/Data/Shaders/Letter/: Letter.frag  Letter.frag.spv  Letter.vert
EndlessSpace/src/Data/Shaders/Skybox/: Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv
EndlessSpace/src/Interface/: CMakeLists.txt  DebugData.cpp  DebugData.hpp  PieMenu.cpp  PieMenu.hpp
EndlessSpace/src/Object/: CMakeLists.txt  CameraController.cpp  CameraController.hpp  SpaceManager.cpp  SpaceManager.hpp  SpaceObject.cpp  SpaceObject.hpp
EndlessSpace/src/Object/Asteroids/: Asteroid.cpp  Asteroid.hpp  CMakeLists.txt
EndlessSpace/src/Object/Ship/: CMakeLists.txt  EnemyShip.cpp  EnemyShip.hpp  PlayerShip.cpp  PlayerShip.hpp  Ship.cpp  Ship.hpp  ShipAddon.cpp  ShipAddon.hpp  ShipAddonDataManager.cpp  ShipAddonDataManager.hpp
